public/themes/custom/css/wave.css
/* ... */
.mt-4 {
  margin-top: 1rem;
}
.ml-3 {
  margin-left: 0.75rem;
}
.ml-1 {
  margin-left: 0.25rem;
}
.-mt-10 {
  margin-top: -2.5rem;
}
.mt-1 {
  margin-top: 0.25rem;
}
.ml-4 {
  margin-left: 1rem;
}
.mb-6 {
  margin-bottom: 1.5rem;
}
.mt-10 {
  margin-top: 2.5rem;
}
.mr-2 {
  margin-right: 0.5rem;
}
.mr-1 {
  margin-right: 0.25rem;
}
.mb-10 {
  margin-bottom: 2.5rem;
}
.mr-6 {
  margin-right: 1.5rem;
}
.mt-5 {
  margin-top: 1.25rem;
}
.mt-6 {
  margin-top: 1.5rem;
}
.mt-auto {
  margin-top: auto;
}
.mr-3 {
  margin-right: 0.75rem;
}
.ml-2 {
  margin-left: 0.5rem;
}
.-mr-2 {
  margin-right: -0.5rem;
}
.-ml-px {
  margin-left: -1px;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.mt-7 {
  margin-top: 1.75rem;
}
.-mt-1 {
  margin-top: -0.25rem;
}
.mr-5 {
  margin-right: 1.25rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.mb-5 {
  margin-bottom: 1.25rem;
}
.mt-20 {
  margin-top: 5rem;
}
.-ml-1 {
  margin-left: -0.25rem;
}
.-mt-12 {
  margin-top: -3rem;
}
.mt-8 {
  margin-top: 2rem;
}
.ml-0\.5 {
  margin-left: 0.125rem;
}
.ml-0 {
  margin-left: 0px;
}
.ml-auto {
  margin-left: auto;
}
.mr-auto {
  margin-right: auto;
}
.mb-8 {
  margin-bottom: 2rem;
}
.-ml-5 {
  margin-left: -1.25rem;
}
.ml-10 {
  margin-left: 2.5rem;
}
.mb-0 {
  margin-bottom: 0px;
}
.mb-3 {
  margin-bottom: 0.75rem;
}
.mt-0 {
  margin-top: 0px;
}
.ml-12 {
  margin-left: 3rem;
}
.-mt-px {
  margin-top: -1px;
}
.-mt-4 {
  margin-top: -1rem;
}
.-mr-8 {
  margin-right: -2rem;
}
.mb-16 {
  margin-bottom: 4rem;
}
.-mt-64 {
  margin-top: -16rem;
}
.mt-16 {
  margin-top: 4rem;
}
.mb-1 {
  margin-bottom: 0.25rem;
}
.block {
  display: block;
}
.inline-block {
  display: inline-block;
}
.inline {
  display: inline;
}
.flex {
  display: flex;
}
.inline-flex {
  display: inline-flex;
}
.table {
  display: table;
}
.grid {
  display: grid;
}
.contents {
  display: contents;
}
.hidden {
  display: none;
}
.h-full {
  height: 100%;
}
.h-5 {
  height: 1.25rem;
}
.h-1\/3 {
  height: 33.333333%;
}
.h-48 {
  height: 12rem;
}
.h-10 {
  height: 2.5rem;
}
.h-screen {
  height: 100vh;
}
.h-14 {
  height: 3.5rem;
}
.h-6 {
  height: 1.5rem;
}
.h-4 {
  height: 1rem;
}
.h-8 {
  height: 2rem;
}
.h-20 {
  height: 5rem;
}
.h-24 {
  height: 6rem;
}
.h-auto {
  height: auto;
}
.h-1 {
  height: 0.25rem;
}
.h-12 {
  height: 3rem;
}
.h-9 {
  height: 2.25rem;
}
.h-32 {
  height: 8rem;
}
.h-56 {
  height: 14rem;
}
.h-3 {
  height: 0.75rem;
}
.h-16 {
  height: 4rem;
}
.h-0 {
  height: 0px;
}
.h-\[500px\] {
  height: 500px;
}
.h-\[90px\] {
  height: 90px;
}
.h-\[400px\] {
  height: 400px;
}
.h-\[50px\] {
  height: 50px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-full {
  width: 100%;
}
.w-1 {
  width: 0.25rem;
}
.w-auto {
  width: auto;
}
.w-10 {
  width: 2.5rem;
}
.w-5 {
  width: 1.25rem;
}
.w-6 {
  width: 1.5rem;
}
.w-14 {
  width: 3.5rem;
}
.w-4 {
  width: 1rem;
}
.w-0 {
  width: 0px;
}
.w-12 {
  width: 3rem;
}
.w-screen {
  width: 100vw;
}
.w-8 {
  width: 2rem;
}
.w-56 {
  width: 14rem;
}
.w-20 {
  width: 5rem;
}
.w-9 {
  width: 2.25rem;
}
.w-32 {
  width: 8rem;
}
.w-64 {
  width: 16rem;
}
.w-3 {
  width: 0.75rem;
}
.w-16 {
  width: 4rem;
}
.w-24 {
  width: 6rem;
}
.w-\[370px\] {
  width: 370px;
}
.w-7 {
  width: 1.75rem;
}
.w-\[500px\] {
  width: 500px;
}
.min-w-full {
  min-width: 100%;
}
.max-w-6xl {
  max-width: 72rem;
}
.max-w-4xl {
  max-width: 56rem;
}
.max-w-md {
  max-width: 28rem;
}
.max-w-7xl {
  max-width: 80rem;
}
.max-w-sm {
  max-width: 24rem;
}
.max-w-xs {
  max-width: 20rem;
}
.max-w-lg {
  max-width: 32rem;
}
.max-w-xl {
  max-width: 36rem;
}
.max-w-2xl {
  max-width: 42rem;
}
.max-w-3xl {
  max-width: 48rem;
}
.flex-1 {
  flex: 1 1 0%;
}
.flex-shrink-0 {
  flex-shrink: 0;
}
.flex-shrink {
  flex-shrink: 1;
}
.shrink {
  flex-shrink: 1;
}
.shrink-0 {
  flex-shrink: 0;
}
.flex-grow {
  flex-grow: 1;
}
.grow {
  flex-grow: 1;
}
.origin-top-right {
  transform-origin: top right;
}
.origin-top {
  transform-origin: top;
}
.translate-y-full {
  --tw-translate-y: 100%;
  transform: var(--tw-transform);
}
.translate-y-0 {
  --tw-translate-y: 0px;
  transform: var(--tw-transform);
}
.-translate-y-1 {
  --tw-translate-y: -0.25rem;
  transform: var(--tw-transform);
}
.translate-y-12 {
  --tw-translate-y: 3rem;
  transform: var(--tw-transform);
}
.translate-y-2 {
  --tw-translate-y: 0.5rem;
  transform: var(--tw-transform);
}
.translate-y-4 {
  --tw-translate-y: 1rem;
  transform: var(--tw-transform);
}
.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: var(--tw-transform);
}
.-translate-x-full {
  --tw-translate-x: -100%;
  transform: var(--tw-transform);
}
.translate-x-12 {
  --tw-translate-x: 3rem;
  transform: var(--tw-transform);
}
.-rotate-180 {
  --tw-rotate: -180deg;
  transform: var(--tw-transform);
}
.-rotate-3 {
  --tw-rotate: -3deg;
  transform: var(--tw-transform);
}
.scale-110 {
  --tw-scale-x: 1.1;
  --tw-scale-y: 1.1;
  transform: var(--tw-transform);
}
.scale-100 {
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  transform: var(--tw-transform);
}
.scale-95 {
  --tw-scale-x: .95;
  --tw-scale-y: .95;
  transform: var(--tw-transform);
}
.transform {
  transform: var(--tw-transform);
}
@-webkit-keyframes spin {

  to {
    transform: rotate(360deg);
  }
}
@keyframes spin {

  to {
    transform: rotate(360deg);
  }
}
.animate-spin {
  -webkit-animation: spin 1s linear infinite;
          animation: spin 1s linear infinite;
}
@-webkit-keyframes pulse {

  50% {
    opacity: .5;
  }
}
@keyframes pulse {

  50% {
    opacity: .5;
  }
}
.animate-pulse {
  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}
.cursor-pointer {
  cursor: pointer;
}
.cursor-default {
  cursor: default;
}
.select-none {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.resize {
  resize: both;
}
.appearance-none {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
}
/* ... */

